// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main Class definition parses with custom handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
  },
]
`;

exports[`main Class definition parses with default resolver/handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
    "displayName": "ABC",
    "methods": Array [],
    "props": Object {
      "foo": Object {
        "defaultValue": Object {
          "computed": false,
          "value": "true",
        },
        "description": "Example prop description",
        "required": false,
        "type": Object {
          "name": "bool",
        },
      },
    },
  },
]
`;

exports[`main React.createClass parses with custom handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
  },
]
`;

exports[`main React.createClass parses with default resolver/handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
    "displayName": "ABC",
    "methods": Array [
      Object {
        "docblock": null,
        "modifiers": Array [],
        "name": "getDefaultProps",
        "params": Array [],
        "returns": null,
      },
    ],
    "props": Object {
      "foo": Object {
        "defaultValue": Object {
          "computed": false,
          "value": "true",
        },
        "description": "Example prop description",
        "required": false,
        "type": Object {
          "name": "bool",
        },
      },
    },
  },
]
`;

exports[`main Stateless Component definition: ArrowFunctionExpression parses with custom handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
  },
]
`;

exports[`main Stateless Component definition: ArrowFunctionExpression parses with default resolver/handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
    "displayName": "ABC",
    "methods": Array [],
    "props": Object {
      "foo": Object {
        "defaultValue": Object {
          "computed": false,
          "value": "true",
        },
        "description": "Example prop description",
        "required": false,
        "type": Object {
          "name": "bool",
        },
      },
    },
  },
]
`;

exports[`main Stateless Component definition: FunctionDeclaration parses with custom handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
  },
]
`;

exports[`main Stateless Component definition: FunctionDeclaration parses with default resolver/handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
    "displayName": "ABC",
    "methods": Array [],
    "props": Object {
      "foo": Object {
        "defaultValue": Object {
          "computed": false,
          "value": "true",
        },
        "description": "Example prop description",
        "required": false,
        "type": Object {
          "name": "bool",
        },
      },
    },
  },
]
`;

exports[`main Stateless Component definition: FunctionExpression parses with custom handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
  },
]
`;

exports[`main Stateless Component definition: FunctionExpression parses with default resolver/handlers 1`] = `
Array [
  Object {
    "description": "Example component description",
    "displayName": "ABC",
    "methods": Array [],
    "props": Object {
      "foo": Object {
        "defaultValue": Object {
          "computed": false,
          "value": "true",
        },
        "description": "Example prop description",
        "required": false,
        "type": Object {
          "name": "bool",
        },
      },
    },
  },
]
`;
